<resources>
    <string name="app_name">L11_PS</string>
    <string name="addMovie">Add Movie</string>
    <string name="title">Enter movie title here</string>
    <string name="genre">Enter genre here</string>
    <string name="year">Enter year of release here</string>
    <string name="btnInsert">INSERT</string>
    <string name="btnShowList">SHOW LIST</string>
    <string-array name="spinnerItems">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>


<!--    String[] ratingArray = {"G", "PG", "PG13", "NC16", "M18", "R21"};-->
<!--    ArrayAdapter<String> adapter = new ArrayAdapter<>(this, R.layout.spinnerlayout, ratingArray);-->
<!--    spinningRating.setAdapter(adapter);-->



</resources>